# QSAT

./: runtests.hs  satq.cabal
HQPlayground/: hqp.cabal
HQPlayground/exe/: SAT.hs
HQPlayground/srcSAT/: AST.hs  Parser.hs  Transform.hs
exe/: SAT.hs
src/: ANF.hs  AST.hs  Comp.hs  Eval.hs  Gates.hs  Grovers.hs  LinAlg.hs  Measure.hs  Parser.hs  PhaseEval.hs  ProgramInversion.hs  Quantumize.hs  StateVector.hs  Verif.hs
src2/: Comp.hs  Eval.hs  Gates2.hs  Grovers.hs  Parser.hs
tests/: Eval_Tests.hs  Tests.hs
