cabal-version:      3.4
name:               satq
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/sunsky426/atpl25-SATsolver
license:            BSD-3-Clause
author:             Barbella, Kanne, Schmidt, Zou
maintainer:         -
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src, tests
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      hqp,
                      mtl,
                      random,
                      hmatrix,
                      vector,
                      tasty,
                      tasty-hunit
    exposed-modules:  AST,
                      Generator,
                      Parser,
                      Quantumize,
                      Grovers,
                      ProgramInversion,
                      Macros,
                      Eval,
                      Gates,
                      LinAlg,
                      Eval_Tests
    default-language: GHC2021

executable SATQ
    import:           warnings
    main-is:          SAT.hs
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      satq,
                      hqp,
                      mtl,
                      random,
                      hmatrix,
                      vector
    hs-source-dirs:   exe,
                      src
    default-language: GHC2021

test-suite tests
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , satq
